<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/black"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@raw/img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="18dp"
        app:cardElevation="16dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:id="@+id/view"
            android:layout_width="340dp"
            android:layout_height="520dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/textView3"
                android:layout_width="89dp"
                android:layout_height="27dp"
                android:elevation="10dp"
                android:inputType="none"
                android:text="@string/textViewLogin1"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.047"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.196" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="89dp"
                android:layout_height="27dp"
                android:elevation="10dp"
                android:inputType="none"
                android:text="@string/textViewLogin2"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.047"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.407" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="262dp"
                android:layout_height="54dp"
                android:ems="10"
                android:hint="Enter Name"
                android:inputType="text"
                android:text="@string/EditTextNameLogin"
                android:textColor="@color/black"
                android:textColorHint="#B4272424"
                app:layout_constraintBottom_toTopOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.126"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintVertical_bias="0.29" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="246dp"
                android:layout_height="58dp"
                android:ems="10"
                android:hint="Enter Password"
                android:inputType="text"
                android:text="@string/EditTextPasswordLogin"
                android:textColor="@color/black"
                android:textColorHint="#B4272424"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.126"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:layout_constraintVertical_bias="0.036" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/ButtonSignup"
                android:layout_width="160dp"
                android:layout_height="49dp"
                android:layout_gravity="bottom|right"
                android:layout_margin="16dp"
                android:elevation="10dp"
                android:inputType="none"
                android:text="@string/LoginButton"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.433"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText3"
                app:layout_constraintVertical_bias="0.345" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="340dp"
                android:layout_height="50dp"
                android:layout_marginBottom="46dp"
                android:background="#DCD0FF"
                android:clickable="false"
                android:ems="10"
                android:fontFamily="serif-monospace"
                android:inputType="none"
                android:text="@string/EditTextheaderLogin"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                android:typeface="normal"
                app:layout_constraintBottom_toTopOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible"
                android:elevation="20dp"/>

            <ProgressBar
                android:id="@+id/progressBar2"
                style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Small"
                android:layout_width="95dp"
                android:layout_height="65dp"
                android:progressBackgroundTint="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>